[package]
name = "rustac"
version = "0.1.0"
authors = ["Henrik Paul Koehn <hpkoehn@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

piston = "0.49.0"
piston2d-graphics = "0.32.0"
pistoncore-glutin_window = "0.63.0"
piston2d-opengl_graphics = "0.65.0"

serde = {version = "1.0", features = ["derive"] }
serde_yaml = "0.8"

libmath = "0.2.1"

recs = { git = "https://github.com/HPKoehn/recs/" }
